<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <RadioGroup android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/category1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category1"/>
            <RadioButton android:id="@+id/category2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category2"/>
            <RadioButton android:id="@+id/category3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category3"/>
            <RadioButton android:id="@+id/category4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category4"/>
            <RadioButton android:id="@+id/category5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category5"/>
            <RadioButton android:id="@+id/category6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category6"/>
            <RadioButton android:id="@+id/category7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category7"/>

        </RadioGroup>
    </HorizontalScrollView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/news_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>